tests/baselines/reference/genericTypeArgumentInference1.errors.txt
tests/cases/compiler/genericTypeArgumentInference1.ts(12,39): error TS2345: Argument of type '<T>(value: T) => T' is not assignable to parameter of type 'Iterator<string | number | boolean, boolean>'.
  Type 'string | number | boolean' is not assignable to type 'boolean'.
    Type 'string' is not assignable to type 'boolean'.


==== tests/cases/compiler/genericTypeArgumentInference1.ts (1 errors) ====
    module Underscore {
        export interface Iterator<T, U> {
            (value: T, index: any, list: any): U;
        }
        export interface Static {
            all<T>(list: T[], iterator?: Iterator<T, boolean>, context?: any): T;
            identity<T>(value: T): T;
        }
    }
    declare var _: Underscore.Static;
    
    var r = _.all([true, 1, null, 'yes'], _.identity);
                                          ~~~~~~~~~~
!!! error TS2345: Argument of type '<T>(value: T) => T' is not assignable to parameter of type 'Iterator<string | number | boolean, boolean>'.
!!! error TS2345:   Type 'string | number | boolean' is not assignable to type 'boolean'.
!!! error TS2345:     Type 'string' is not assignable to type 'boolean'.
    var r2 = _.all([true], _.identity);
    var r3 = _.all([], _.identity);
    var r4 = _.all([<any>true], _.identity);
    